<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp"
    android:elevation="10dp"
    android:layout_marginBottom="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/user_picture_"
        android:elevation="3dp"
        android:scaleType="centerCrop"
        android:translationZ="3dp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@id/user_icon"
        android:fontFamily="@font/comfortaa"
        android:text="@string/user_name"
        android:textAlignment="viewStart"
        android:textColor="#1E1E1E"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/fav_sign"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignEnd="@id/user_icon"
        android:layout_alignBottom="@+id/user_icon"
        android:layout_marginBottom="-6dp"
        android:layout_marginEnd="-6dp"
        android:visibility="invisible"
        android:scaleType="centerCrop"
        android:contentDescription="@string/favorite"
        android:elevation="5dp"
        android:translationZ="5dp" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        app:dividerColor="#979797"
        app:dividerInsetStart="5dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/user_icon"
        android:paddingBottom="1dp"/>

</RelativeLayout>
