<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:elevation="5dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_sheet"
        android:layout_width="360dp"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#424242"
                android:fontFamily="@font/raleway"
                android:padding="10dp"
                android:text="@string/remove_from_favorites"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sub_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/raleway"
                android:text="@string/this_operation_is_irreversible"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_below="@id/text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:indeterminateOnly="false"
                android:progressDrawable="@drawable/circle"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text"
                tools:progress="60"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/check_sign"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:contentDescription="@string/check_sign"
                android:src="@drawable/ic_baseline_check_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="@+id/progressBar"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/item_removed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/raleway"
                android:text="@string/removed_successfully"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/dismiss_btn"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_below="@id/card_sheet"
        android:layout_alignStart="@id/card_sheet"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-30dp"
        android:backgroundTint="#4C8E4E"
        android:elevation="6dp"
        android:text="@string/dismiss"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/remove_btn"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_below="@id/card_sheet"
        android:layout_alignEnd="@id/card_sheet"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#A54B4B"
        android:elevation="6dp"
        android:text="@string/remove"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>
