<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Company.CompanyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/company_appbar"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="270dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/company_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:title="Name"
            app:expandedTitleMarginStart="25dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:expandedTitleGravity="left|bottom"
            app:collapsedTitleGravity="left"
            app:expandedTitleMarginEnd="65dp"
            app:expandedTitleTextAppearance="@style/CollapsedAppBar">

            <ImageView
                android:id="@+id/company_bgImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:minHeight="100dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
                app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#45000000" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="65dp"
                app:layout_collapseMode="pin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/company_toolbar_pic"
                    android:layout_width="50sp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    app:layout_collapseMode="parallax"
                    android:layout_centerVertical="true"
                    app:civ_border_color="#ffffff"
                    app:civ_border_width="2dp"/>

            </androidx.appcompat.widget.Toolbar>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_company_profile"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="20dp"
                android:elevation="15dp"
                android:translationZ="15dp"
                android:alpha="45"
                app:layout_collapseMode="parallax"
                android:transitionName="company_logo"
                app:civ_border_color="#ffffff"
                app:civ_border_width="2dp"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:id="@+id/jojo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/company_facebook"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/facebook" />

                <ImageView
                    android:id="@+id/company_twitter"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/twitter" />

                <ImageView
                    android:id="@+id/company_youtube"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/youtube" />

                <ImageView
                    android:id="@+id/company_instagram"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/instagram" />

                <ImageView
                    android:id="@+id/company_site"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/site" />

            </LinearLayout>

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/description"
                android:layout_marginStart="25dp"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="@string/about_us"
                android:layout_below="@id/social"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@id/label"
                android:layout_marginBottom="5dp"
                android:textSize="24sp"
                android:padding="20dp"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>