<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:background="#00FFFFFF"
        android:layout_margin="7.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="top"
                android:contentDescription="@string/image_slider"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAllCaps="true"
                android:text="@string/sale"
                android:textSize="16sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#E91E63"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reduced_price"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:background="#ffffff"
                    android:fontFamily="@font/nunito_semibold"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/slider_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"/>

            </LinearLayout>

            <Button
                android:id="@+id/store_link"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/fui_transparent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/shop"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>